misc/.metadata/.plugins/org.eclipse.cdt.ui/DFSsequence.build.log
14:28:58 **** Incremental Build of configuration Debug for project DFSsequence ****
make all 
Building file: ../sequence.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"sequence.d" -MT"sequence.o" -o "sequence.o" "../sequence.cpp"
../sequence.cpp:9:18: error: a space is required between consecutive right angle brackets (use '> >')
map<ll, vector<ll>> adj;
                 ^~
                 > >
../sequence.cpp:17:7: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
                for(auto el:adj[u]) dfs(el);
                    ^
../sequence.cpp:17:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
                for(auto el:adj[u]) dfs(el);
                           ^
../sequence.cpp:28:15: error: expected expression
                adj[ver[i]]={};
                            ^
../sequence.cpp:31:6: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        for(auto i:ver){
            ^
../sequence.cpp:31:12: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
        for(auto i:ver){
                  ^
../sequence.cpp:32:7: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
                for(auto j:ver){
                    ^
../sequence.cpp:32:13: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
                for(auto j:ver){
                          ^
../sequence.cpp:36:6: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        for(auto i:ver){
            ^
../sequence.cpp:36:12: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
        for(auto i:ver){
                  ^
../sequence.cpp:39:8: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
                        for(auto j:ord) cout << j << " ";
                            ^
../sequence.cpp:39:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
                        for(auto j:ord) cout << j << " ";
                                  ^
../sequence.cpp:43:7: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
                for(auto &j:visited) visited.second=0;
                    ^
../sequence.cpp:43:14: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
                for(auto &j:visited) visited.second=0;
                           ^
../sequence.cpp:43:32: error: no member named 'second' in 'std::__1::map<long long, bool, std::__1::less<long long>, std::__1::allocator<std::__1::pair<const long long, bool> > >'
                for(auto &j:visited) visited.second=0;
                                     ~~~~~~~ ^
12 warnings and 3 errors generated.
make: *** [sequence.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

14:28:58 Build Failed. 4 errors, 12 warnings. (took 627ms)

